	(Dank an Telefonmännchen)
	* phonebook: Umlaute beim Lesen vom AVM-Telefonbuch korrigiert
	(Kodierung wurde geändert)

2009-05-09:

	* reverse: DasÖrtliche hat seine Webseiten wieder einmal geändert:
	Rückwärtssuche angepasst

	callmonitor-1.13

2009-05-31:

	* webui.sh: Unterstützung der neuen Session-IDs

	callmonitor-1.14

2009-06-06:

	* dbox*: Ersetzung von ";" und "&", die von der DBox nicht richtig
	verarbeitet zu werden scheinen

2009-08-??:

	* if_jfritz: Automatisches Wählen (zur Aktivierung der Callmonitor-
	Schnittstelle) im Sekundenabstand behoben; eigentliche Ursache für
	wiederholtes Fehlschlagen ist noch unklar.

	* recode: Von Shell- auf C-Implementierung umgestellt

2009-08-16:

	callmonitor-1.15

2009-08-23:

	* musicpal.sh: Aktionen für Freecom MusicPal (Internetradio):
	    musicalpalmessage (benutzt MUSICPAL_TIMEOUT), musicpalclear
	* goyellow: Rückwärtssuche an neue Webseite angepasst

2009-08-30:

	callmonitor-1.15.1

	* Installation: Es können verschiedene Teilmengen der Callmonitor-
	Funktionalität installiert werden:
		
	    webif	Web interface
	    actions	Callmonitor actions (callable via 'callaction')
	    monitor	Monitoring daemon 'callmonitor'
	    phonebook	Phonebook support (and reverse lookup)

2009-09-04:

	* tel.sh: Bei der Normalisierung von Telefonnummern werden nun
	vorausgewählte Gruppen, die in die Zeichen * oder # eingeschlossen
	sind, entfernt (Anregung von ao)

	* fshash.sh: Die Benutzung eines leeren AVM-Telefonbuch führte dazu,
	dass das Telefonbuch immer wieder langwierig eingelesen wurde.

2009-09-11:

	callmonitor-1.16

2009-02-21:

	* webui.sh: Login bei Firmware 54.04.80 funktionierte nicht.
	
	* callmonitor: Bei Bedarf lassen sich nun die Anrufe auf einer anderen
	Box überwachen als auf der, auf der der Callmonitor läuft.
	
	* cgi: Expertenmodus eingeführt, um selten benötigte Funktionen zu
	verstecken.

	* 11880.sh: 11880 hat seine Rückwärtssuche-Seiten überarbeitet.

	callmonitor-1.17