@@ -15,6 +15,8 @@ Suchreihenfolge der Telefonfonbücher: Warum Cache nicht immer als letztes?
 Demnächst anschauen
 ----------------------------------------------------------------------
 
+Expertenansicht per Javascript dynamisch aktivieren (ohne Submission)
+
 Evtl. webui_logout einfügen
 
 ----------------------------------------------------------------------
