@@ -4,6 +4,7 @@ Usage:	$APPLET [OPTION]...
 Options:
     -f		run in foreground
     -s		stop the callmonitor
+    --version	output version information and exit
     --debug     log rule matching/executed commands to syslog
 		(and to stderr with -f)
     --help	show this help
