@@ -34,9 +34,9 @@ CALLMONITOR_LISTENERS=$flash/callmonitor/listeners-1
 CALLMONITOR_PERSISTENT=$flash/callmonitor/callers
 CALLMONITOR_TRANSIENT=/var/cache/phonebook/callers
 
-CALLMONITOR_DUMPFILE=$CALLMONITOR_TMPDIR/callmonitor.dump
+CALLMONITOR_DUMPDIR=/var/lib/callmonitor/trace
 
-CALLMONITOR_DOC_URL='http://www.freetz.org/wiki/packages/callmonitor'
+CALLMONITOR_DOC_URL='http://trac.freetz.org/wiki/packages/callmonitor'
 CALLMONITOR_FORUM_URL='http://www.ip-phone-forum.de/showthread.php?t=191723'
 
 ## computed values
